Correct menu dark mode colors

--- a/pkg/tool/handlers/static/css/styles.scss
+++ b/pkg/tool/handlers/static/css/styles.scss
@@ -6,7 +6,6 @@ $tfl-orange:      rgb(223,131,52);
 $tfl-green:       rgb(0, 121, 52);
 $tfl-green-light: rgb(132, 185, 66);
 
-
 .menu {
   border-top-width: 0.3rem;
   border-top-style: solid;
@@ -22,6 +21,10 @@ $tfl-green-light: rgb(132, 185, 66);
       &.selected {
         background-color: transparentize($tfl-blue, 0.7);
         color: darken($tfl-blue, 5%);
+
+        @media (prefers-color-scheme: dark) {
+          color: lighten($tfl-blue, 40%);
+        }
       }
     }
   }
@@ -34,6 +37,10 @@ $tfl-green-light: rgb(132, 185, 66);
       &.selected {
         background-color: transparentize($tfl-red, 0.7);
         color: darken($tfl-red, 30%);
+
+        @media (prefers-color-scheme: dark) {
+          color: lighten($tfl-red, 40%);
+        }
       }
     }
   }
@@ -46,6 +53,10 @@ $tfl-green-light: rgb(132, 185, 66);
       &.selected {
         background-color: transparentize($tfl-green, 0.7);
         color: darken($tfl-green, 10%);
+
+        @media (prefers-color-scheme: dark) {
+          color: lighten($tfl-green, 40%);
+        }
       }
     }
   }
@@ -58,6 +69,10 @@ $tfl-green-light: rgb(132, 185, 66);
       &.selected {
         background-color: transparentize($tfl-yellow, 0.7);
         color: darken($tfl-yellow, 30%);
+
+        @media (prefers-color-scheme: dark) {
+          color: lighten($tfl-yellow, 40%);
+        }
       }
     }
   }
